Bug fix, activity does not show icon before

--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,9 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <!-- Google Fonts: Noto Color Emoji for reliable emoji rendering -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
+
   <title>habit_logger</title>
   <link rel="manifest" href="manifest.json">
 </head>
