Rename to day coach app

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="habit_logger">
+  <meta name="apple-mobile-web-app-title" content="Day Coach">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -33,7 +33,7 @@
   <!-- Google Fonts: Noto Color Emoji for reliable emoji rendering -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap" rel="stylesheet">
 
-  <title>Habits Logger</title>
+  <title>Day Coach</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
